--- a/photo.html
+++ b/photo.html
@@ -5,16 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <link rel="stylesheet" href="/style/style.css">
-    <title>Photo page</title>
+    <title>shecodes croissant baking photo</title>
   </head>
-  <style>
-    img {
-        max-width: 400px;
-    }
-    </style>
+  
   </style>
   <body>
-    <img src="/images/kyoto8.jpg" />
+    <img src="/images/kyoto8.jpg" alt="kyoto woman" />
   </br>
 
     <a href="/">Homepage</a>
