--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="shecodes coding learning seo excerise" />
     <link rel="stylesheet" href="/style/style.css" />
-    <title>Croissant</title>
+
+    <title>shecodes croissant baking demo page</title>
   </head>
   <body>
     <h1>Operation Croissant</h1>
